Add version metadata to responses
This incorporates the following data into a "meta" section in the
response:

* "application_version", where this is the git commit hash of the
application that is generating the response. We have access to this in
the production kubernetes deploy.
* "format_version", a plain integer value which is set to 1. We can bump
this when there are major changes in the format.
* "dataset_checksums", an object containing the checksum value
associated with each dataset involved in processing the request

Bug: T271603
